# Genesis-Field-Network

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: demo.py
genesis_field_network/: __init__.py  core.py
tests/: conftest.py  test_field_element.py  test_genesis_field_network.py  test_integration.py  test_phase_adapter.py  test_resonance_coupler.py  test_topological_morpher.py
