[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "genesis-field-network"
version = "0.1.0"
description = "A field-based resonance computation system beyond deep learning"
requires-python = ">=3.8"
dependencies = ["numpy>=1.21.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::RuntimeWarning"]

[tool.coverage.run]
source = ["genesis_field_network"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70
